--- a/boost/trunk/PKGBUILD
+++ b/boost/trunk/PKGBUILD
@@ -4,21 +4,21 @@
 # Contributor: Luca Roccia <little_rock@users.sourceforge.net>
  
 pkgname=boost
-pkgver=1.35.0
-_boostver=1_35_0
+pkgver=1.36.0
+_boostver=1_36_0
 pkgrel=1
 pkgdesc="Boost provides free peer-reviewed portable C++ source libraries."
 arch=(i686 x86_64)
 url="http://www.boost.org/"
 depends=('python>=2.5' 'bzip2' 'zlib')
 source=(http://downloads.sourceforge.net/sourceforge/$pkgname/${pkgname}_${_boostver}.tar.gz serialization_gcc43.patch)
-md5sums=('a6b7d92c335c83e69a968a7a7926c933' '43b88598f62485295301f75b94972b81')
 license=('custom')
+md5sums=('550b9157a596f9095aaafd683c4bccf8')
  
 build() {
   cd $startdir/src/${pkgname}_${_boostver}
   export CFLAGS="${CFLAGS} -fno-strict-aliasing"
-  patch -p5 < ../serialization_gcc43.patch || return 1
+#  patch -p5 < ../serialization_gcc43.patch || return 1
 
   # build bjam
   cd $startdir/src/${pkgname}_${_boostver}/tools/jam/src
