upgpkg: quodlibet 2.0-1     Upstream update, Updated url, Fixed license, Updated build process
git-svn-id: file:///srv/repos/svn-packages/svn@12774 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/quodlibet/trunk/PKGBUILD
+++ b/quodlibet/trunk/PKGBUILD
@@ -2,22 +2,22 @@
 # Maintainer: Eric Belanger <eric@archlinux.org>
 
 pkgname=quodlibet
-pkgver=1.0
-pkgrel=3
+pkgver=2.0
+pkgrel=1
 pkgdesc="An audio player written in pygtk"
 arch=('i686' 'x86_64')
-license=('GPL')
-url="http://www.sacredchao.net/quodlibet/"
+license=('GPL2')
+url="http://code.google.com/p/quodlibet/"
 depends=('gstreamer0.10-python>=0.10.12' 'gstreamer0.10-base-plugins' 'gstreamer0.10-good-plugins' 'gstreamer0.10-ugly-plugins' 'mutagen' 'pygtk>=2.12.1')
 makedepends=('intltool')
 optdepends=('gstreamer0.10-ffmpeg: for ffmpeg (ASF/WMA) support ' 'gstreamer0.10-bad-plugins: for MPEG-4 (AAC) and Musepack support' 'dbus-python: for dbus support' 'libgpod: for ipod support')
 options=('!makeflags')
-source=(http://www.sacredchao.net/~piman/software/${pkgname}-${pkgver}.tar.gz)
-md5sums=('5c925b754bd8505a7a66f2ffcc5b5fe4')
-sha1sums=('9a72043b635448b3d148bd7216a2e00271a926a0')
+source=(http://quodlibet.googlecode.com/files/${pkgname}-${pkgver}.tar.gz)
+md5sums=('4ec9703b3ef7ecf5c6ecf1b8ac7773f4')
+sha1sums=('93d378234feae798c65452085add0b46a2440be4')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
-  make extensions || return 1
-  make DESTDIR=${pkgdir} PREFIX=/usr INTLTOOL_EXTRACT=/usr/bin/intltool-extract install || return 1
+  ./setup.py build || return 1
+  ./setup.py install --prefix=${pkgdir}/usr || return 1
 }
