upgpkg: quodlibet 2.0-2     Placed copy of icon in /usr/share/pixmaps to fix desktop entry
git-svn-id: file:///srv/repos/svn-packages/svn@12780 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/quodlibet/trunk/PKGBUILD
+++ b/quodlibet/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=quodlibet
 pkgver=2.0
-pkgrel=1
+pkgrel=2
 pkgdesc="An audio player written in pygtk"
 arch=('i686' 'x86_64')
 license=('GPL2')
@@ -20,4 +20,6 @@ build() {
   cd ${srcdir}/${pkgname}-${pkgver}
   ./setup.py build || return 1
   ./setup.py install --prefix=${pkgdir}/usr || return 1
+  install -D -m644 quodlibet/images/exfalso.png ${pkgdir}/usr/share/pixmaps/exfalso.png || return 1
+  install -D -m644 quodlibet/images/quodlibet.png ${pkgdir}/usr/share/pixmaps/quodlibet.png || return 1
 }
