--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,26 +2,20 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 # Contributor: Alexander Baldeck <alexander@archlinux.org>
 pkgname=pixman
-pkgver=0.11.10
-pkgrel=2
+pkgver=0.12.0
+pkgrel=1
 pkgdesc="Pixman library"
 arch=(i686 x86_64)
 url="http://xorg.freedesktop.org"
 license=()
 depends=('glibc')
 options=('!libtool')
-source=(http://xorg.freedesktop.org/releases/individual/lib/${pkgname}-${pkgver}.tar.bz2
-	bug17477.patch
-	pixman_image_is_opaque.patch)
-md5sums=('5db471bffc5caeebb6a07be674d65373'
-         'b1e2cf02b382342fd37f2c0a8a30c82f'
-         '51e44e673949fce6967493df0f4ca965')
+source=(http://xorg.freedesktop.org/releases/individual/lib/${pkgname}-${pkgver}.tar.bz2)
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
-  patch -Np1 -i ${srcdir}/bug17477.patch || return 1
-  patch -Np1 -i ${srcdir}/pixman_image_is_opaque.patch || return 1
   ./configure --prefix=/usr || return 1
   make || return 1
   make DESTDIR="${pkgdir}" install || return 1
 }
+md5sums=('494af78c1c7d825c9ad6815d7b91f17d')
