--- a/pixman/trunk/PKGBUILD
+++ b/pixman/trunk/PKGBUILD
@@ -11,11 +11,11 @@ license=()
 depends=('glibc')
 options=('!libtool')
 source=(http://xorg.freedesktop.org/releases/individual/lib/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('494af78c1c7d825c9ad6815d7b91f17d')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
-  ./configure --prefix=/usr || return 1
+  ./configure --prefix=/usr --disable-static || return 1
   make || return 1
   make DESTDIR="${pkgdir}" install || return 1
 }
-md5sums=('494af78c1c7d825c9ad6815d7b91f17d')
