--- a/xextproto/trunk/PKGBUILD
+++ b/xextproto/trunk/PKGBUILD
@@ -3,11 +3,12 @@
 
 pkgname=xextproto
 pkgver=7.0.3
-pkgrel=1
+pkgrel=2
 pkgdesc="X11 various extension wire protocol"
 arch=(i686 x86_64)
 license=('custom')
 url="http://xorg.freedesktop.org/"
+depends=('inputproto')
 source=(${url}/releases/individual/proto/${pkgname}-${pkgver}.tar.bz2)
 md5sums=('3a2e0252e853ab30b3bff05ac92ec61c')
 sha1sums=('4a59150f0d9400f3997df542828834969a2c4842')
