--- a/curl/trunk/PKGBUILD
+++ b/curl/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Lucien Immink <l.immink@student.fnt.hvu.nl>
 
 pkgname=curl
-pkgver=7.18.2
+pkgver=7.19.0
 pkgrel=1
 pkgdesc="An URL retrival utility and library"
 arch=('i686' 'x86_64')
@@ -12,14 +12,14 @@ license=('MIT')
 depends=('zlib' 'openssl>=0.9.8b' 'bash' 'ca-certificates')
 options=('!libtool')
 source=(http://curl.haxx.se/download/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('c389be5b0525276e58865956b7465562')
-sha1sums=('0a4d6878d6be22bb2d701a6cf9bf665f66fc8b87')
+md5sums=('c299c5e0f20f633791b4c4f7ced4effe')
+sha1sums=('fffb34be2e3c66e58a5d3daaf8aa38cae33b284f')
 
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
+  cd ${srcdir}/${pkgname}-${pkgver}
   ./configure --prefix=/usr --without-libidn --disable-ldap \
     --with-ca-bundle=/etc/ssl/certs/ca-certificates.crt || return 1
   make || return 1
-  make DESTDIR=${startdir}/pkg install || return 1
-  install -D -m644 COPYING ${startdir}/pkg/usr/share/licenses/${pkgname}/COPYING || return 1
+  make DESTDIR=${pkgdir} install || return 1
+  install -D -m644 COPYING ${pkgdir}/usr/share/licenses/${pkgname}/COPYING || return 1
 }
