--- a/wxmaxima/trunk/PKGBUILD
+++ b/wxmaxima/trunk/PKGBUILD
@@ -1,18 +1,19 @@
-# $Id: PKGBUILD,v 1.10 2008/05/13 19:03:39 pressh Exp $
+# $Id: PKGBUILD,v 1.10 2008/05/13 19:03:39 ronald Exp $
 # Maintainer: Ronald van Haren <ronald.archlinux.org>
 # Contributor: Angelo Theodorou <encelo@users.sourceforge.net>
 # Contributor: Vinay S Shastry <vinayshastry@gmail.com>
 
 pkgname=wxmaxima
-pkgver=0.7.5
-pkgrel=2
+pkgver=0.7.6
+pkgrel=1
 pkgdesc="A wxWidgets GUI for the computer algebra system Maxima"
 arch=('i686' 'x86_64')
 url="http://wxmaxima.sourceforge.net/"
 license=('GPL2')
-depends=('maxima>=5.15' 'libxml2' 'wxgtk')
+depends=('maxima>=5.16.3' 'libxml2' 'wxgtk')
 source=(http://downloads.sourceforge.net/$pkgname/wxMaxima-$pkgver.tar.gz)
-md5sums=('469014a84aca3f334d1e19042208d54b')
+install=wxmaxima.install
+md5sums=('01c607778fa6b332144fcbeb902e6ede')
 
 build() {
   cd $srcdir/wxMaxima-$pkgver
