--- a/deluge/trunk/PKGBUILD
+++ b/deluge/trunk/PKGBUILD
@@ -3,12 +3,12 @@
 
 pkgname=deluge
 pkgver=0.9.09
-pkgrel=2
+pkgrel=3
 pkgdesc="A bittorrent client written with python and pygtk"
 arch=('i686' 'x86_64')
 url="http://deluge-torrent.org/"
 license=('GPL2')
-depends=('pygtk' 'boost=1.34.1' 'pyxdg' 'dbus-python' 'librsvg' 'setuptools')
+depends=('pygtk' 'boost>=1.35.0' 'pyxdg' 'dbus-python' 'librsvg' 'setuptools')
 makedepends=('subversion' 'intltool')
 source=(http://download.deluge-torrent.org/source/${pkgver}/${pkgname}-${pkgver}.tar.gz)
 md5sums=('922d17db05d040a242542a7287aab507')
