upgpkg: gtk-qt-engine 1.1-1     New version 1.1 ported to Qt4
git-svn-id: file:///srv/repos/svn-packages/svn@12834 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/gtk-qt-engine/trunk/PKGBUILD
+++ b/gtk-qt-engine/trunk/PKGBUILD
@@ -3,27 +3,20 @@
 # Contributor: Jake VanderKolk <jakevanderkolk@gmail.com>
 
 pkgname=gtk-qt-engine
-pkgver=0.8
-pkgrel=3
+pkgver=1.1
+pkgrel=1
 pkgdesc="A GTK engine which makes your GTK2 Apps match your QT theme"
 arch=('i686' 'x86_64')
 license=('GPL2')
-url="http://gtk-qt.ecs.soton.ac.uk/"
-depends=('libbonoboui' 'qt3' 'gtk2>=2.10.0' 'kdelibs3>=3.5.7')
-makedepends=('cmake>=2.4.7')
+url="http://gtk-qt.ecs.soton.ac.uk"
+depends=('libbonoboui' 'kdelibs')
+makedepends=('cmake>=2.4.7' 'automoc4' 'pkgconfig')
 source=("http://gtk-qt.ecs.soton.ac.uk/files/${pkgver}/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('9fe75b7765b6a5b49901fcd6f4f4aa4b')
+md5sums=('de8048baef7dfe6c97cd97c463d66152')
 
 build() {
-  cd ${startdir}/src/${pkgname} #-${pkgver}
-  . /etc/profile.d/qt3.sh
-  . /etc/profile.d/kde3.sh
-  ./configure --prefix=/usr
+  cd "$srcdir/$pkgname"
+  cmake . -DCMAKE_INSTALL_PREFIX=/usr
   make || return 1
-  make DESTDIR=${startdir}/pkg install || return 1
-  rm -f ${startdir}/pkg/usr/lib/gtk-2.0/*/engines/*.la
-  # bug 4998
-  #rm ${startdir}/pkg/usr/share/applications/kcmgtk-xdg.desktop
-  # what the ..?
-  rm -rf $pkgdir/usr/local
+  make DESTDIR="$pkgdir/" install
 }
