--- a/ifenslave/trunk/PKGBUILD
+++ b/ifenslave/trunk/PKGBUILD
@@ -2,16 +2,15 @@
 # Maintainer: Judd Vinet <jvinet@zeroflux.org>
 pkgname=ifenslave
 pkgver=1.1.0
-pkgrel=3
+pkgrel=4
 pkgdesc="Utility for bonding ethernet interfaces"
 license=('GPL2')
 arch=(i686 x86_64)
-url="http://www.kernel.org"
+url="http://www.linuxfoundation.org/en/Net:Bonding"
 depends=('glibc')
-source=(http://www.archlinux.org/~tpowa/ifenslave/ifenslave.c bonding.conf.d)
-md5sums=('49f757f658c6cbd1a5c125ea2bb5aa23'
+source=(ftp://ftp.archlinux.org/other/ifenslave/ifenslave.c bonding.conf.d)
+md5sums=('b0d8e4c97094155747cc9238f762c7aa'
          '397fccbf574d5082c7a3c8d3793dc000')
-
 
 build() {
   cd $startdir/src
