--- a/icu/trunk/PKGBUILD
+++ b/icu/trunk/PKGBUILD
@@ -1,10 +1,10 @@
 # $Id$
-# Maintainer: tobias <tobias@archlinux.net>
+# Maintainer: Andreas Radke <andyrtr@archlinux.org>
 # Contributor: Art Gramlich <art@gramlich-net.com>
 
 pkgname=icu
 pkgver=4.0
-pkgrel=1
+pkgrel=2
 pkgdesc="International Components for Unicode library"
 arch=(i686 x86_64)
 url="http://www.icu-project.org/"
@@ -16,7 +16,7 @@ md5sums=('d1a5da2f778da6680ca2de47e1cb9141')
 
 build() {
   cd ${srcdir}/icu/source
-  ./configure --prefix=/usr --sysconfdir=/etc --mandir=/usr/share
+  ./configure --prefix=/usr --sysconfdir=/etc --mandir=/usr/share/man
   make || return 1
   make -j1 DESTDIR=${pkgdir} install || return 1 
 
