upgpkg: libgcrypt 1.4.3-2     added texinfo dependency; removed static lib
git-svn-id: file:///srv/repos/svn-packages/svn@12851 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/libgcrypt/trunk/PKGBUILD
+++ b/libgcrypt/trunk/PKGBUILD
@@ -3,13 +3,13 @@
 
 pkgname=libgcrypt
 pkgver=1.4.3
-pkgrel=1
+pkgrel=2
 pkgdesc="a general purpose crypto library based on the code used"
 arch=(i686 x86_64)
 url="http://www.gnupg.org"
 license=('LGPL')
 groups=('base')
-depends=('libgpg-error>=1.6')
+depends=('libgpg-error>=1.6' 'texinfo')
 options=(!libtool)
 source=(#ftp://ftp.gnupg.org/gcrypt/${pkgname}/${pkgname}-${pkgver}.tar.bz2
 	ftp://ftp.franken.de/pub/crypt/mirror/ftp.gnupg.org/gcrypt/libgcrypt/${pkgname}-${pkgver}.tar.bz2)
@@ -17,7 +17,7 @@ md5sums=('46e50e811ed51f1e0e8dd677dded967d')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
-  ./configure --prefix=/usr --disable-padlock-support
+  ./configure --prefix=/usr --disable-padlock-support --disable-static
   make || return 1
   make DESTDIR=${pkgdir} install || return 1
   rm -f ${pkgdir}/usr/share/info/dir
