--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,17 +1,17 @@
 # $Id$
 # Maintainer: Judd <judd@archlinux.org>
 pkgname=nano
-pkgver=2.0.8
-pkgrel=3
+pkgver=2.0.9
+pkgrel=1
 pkgdesc="Pico editor clone with enhancements"
 arch=('i686' 'x86_64')
 license=('GPL')
 url="http://www.nano-editor.org"
 groups=('base')
-depends=('glibc' 'ncurses')
+depends=('glibc' 'ncurses' 'texinfo')
 source=(http://www.nano-editor.org/dist/v2.0/nano-${pkgver}.tar.gz)
 backup=(etc/nanorc)
-md5sums=('fcb2a26285921458b6fe381c2802b1a8')
+md5sums=('2be94dc43fb60fff4626a2401a977220')
 install=nano.install
 
 build() {
