--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,20 +1,24 @@
 # $Id$
-# Maintainer: judd <jvinet@zeroflux.org>
+# Maintainer: Andreas Radke <andyrtr@archlinux.org>
+
 pkgname=which
-pkgver=2.19
-pkgrel=2
+pkgver=2.20
+pkgrel=1
 pkgdesc="A utility to show the full path of commands"
-arch=(i686 x86_64)
+arch=('i686' 'x86_64')
 url="http://www.xs4all.nl/~carlo17/which"
 license=('GPL3')
+install=which.install
 groups=('base')
-depends=('glibc')
+depends=('glibc' 'texinfo')
 source=(http://www.xs4all.nl/~carlo17/$pkgname/$pkgname-$pkgver.tar.gz)
-md5sums=('bbd094cec2444cd78befbc0cf09deea4')
+md5sums=('95be0501a466e515422cde4af46b2744')
 
 build() {
   cd $startdir/src/$pkgname-$pkgver
   ./configure --prefix=/usr
   make || return 1
   make DESTDIR=$startdir/pkg install
+
+  rm -f ${pkgdir}/usr/share/info/dir
 }
