--- a/cairo/trunk/PKGBUILD
+++ b/cairo/trunk/PKGBUILD
@@ -3,17 +3,17 @@
 # Contributor: Brice Carpentier <brice@daknet.org>
 
 pkgname=cairo
-pkgver=1.6.4
+pkgver=1.7.6
 pkgrel=1
 pkgdesc="Cairo vector graphics library"
 arch=(i686 x86_64)
 license=('LGPL' 'MPL')
 url="http://cairographics.org/"
-depends=('libpng>=1.2.25' 'libxrender' 'fontconfig>=2.5.0' 'pixman>=0.10.0')
+depends=('libpng>=1.2.31' 'libxrender' 'fontconfig>=2.6.0' 'pixman>=0.12.0')
 makedepends=('pkgconfig')
 options=('!libtool')
-source=(http://cairographics.org/releases/${pkgname}-${pkgver}.tar.gz)
-md5sums=('a198d509f9e3a35b78de8bb02174ebb9')
+source=(http://cairographics.org/snapshots/${pkgname}-${pkgver}.tar.gz)
+md5sums=('c612f581b18903b0751a171685fc38dd')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
