--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,17 +1,17 @@
 # $Id$
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 pkgname=atk
-pkgver=1.22.0
+pkgver=1.24.0
 pkgrel=1
 pkgdesc="A library providing a set of interfaces for accessibility"
 arch=(i686 x86_64)
 license=('LGPL')
-depends=('glib2>=2.16.0')
+depends=('glib2>=2.18.1')
 makedepends=('pkgconfig')
-options=('!libtool')
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/1.22/${pkgname}-${pkgver}.tar.bz2)
+options=('!libtool' '!docs')
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/1.24/${pkgname}-${pkgver}.tar.bz2)
 url='http://www.gtk.org/'
-md5sums=('06a2b39a22d5ca35c47435da6b9643ac')
+md5sums=('fb0ee9c7f18b15b490a0168b13740a4d')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
