--- a/gtk2/trunk/PKGBUILD
+++ b/gtk2/trunk/PKGBUILD
@@ -2,22 +2,23 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=gtk2
-pkgver=2.12.11
-pkgrel=3
+pkgver=2.14.2
+pkgrel=1
 pkgdesc="The GTK+ Toolkit (v2)"
 arch=(i686 x86_64)
 url="http://www.gtk.org/"
 install=gtk2.install
-depends=('atk>=1.22.0' 'pango>=1.20.5' 'libxcursor' 'libxinerama' 'libxrandr>=1.2.1' 'libxi' 'libcups>=1.3.8-2' 'libxcomposite' 'libxdamage' 'heimdal>=1.2' 'gnutls>=2.4.1')
+depends=('atk>=1.24.0' 'pango>=1.22.0' 'libxcursor' 'libxinerama' 'libxrandr>=1.2.1' 'libxi' 'libcups>=1.3.8-2' 'libxcomposite' 'libxdamage' 'heimdal>=1.2' 'gnutls>=2.4.1')
 makedepends=('pkgconfig')
-replaces=('gtkprint-cups')
-conflicts=('gtkprint-cups')
-options=('!libtool')
+replaces=('gtkprint-cups' 'gail')
+conflicts=('gtkprint-cups' 'gail')
+provides=('gail')
+options=('!libtool' '!docs')
 backup=(etc/gtk-2.0/gtkrc)
 license=('LGPL')
-source=(http://ftp.gnome.org/pub/gnome/sources/gtk+/2.12/gtk+-${pkgver}.tar.bz2
+source=(http://ftp.gnome.org/pub/gnome/sources/gtk+/2.14/gtk+-${pkgver}.tar.bz2
 	gtkclipboard-check.patch)
-md5sums=('f7aab88e856a813386f797aade5867ad'
+md5sums=('b693a2c1c2dd95457b87d0d042aa5bba'
          '4025d3c15d6c6f73a032f403ffd4ff1c')
 
 build() {
@@ -26,7 +27,8 @@ build() {
   patch -Np1 -i ${startdir}/src/gtkclipboard-check.patch || return 1
 
   ./configure --prefix=/usr --sysconfdir=/etc \
-              --localstatedir=/var --with-xinput=xfree \
+              --localstatedir=/var --with-xinput=yes \
+	      --without-libjasper \
 	      --with-included-loaders=png || return 1
   make || return 1
   make DESTDIR=${startdir}/pkg install || return 1
