remove patch; prepare for 4.1.2 release
git-svn-id: file:///srv/repos/svn-packages/svn@12898 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdepimlibs/trunk/PKGBUILD
+++ b/kdepimlibs/trunk/PKGBUILD
@@ -11,14 +11,11 @@ license=('GPL' 'LGPL')
 groups=('kde')
 depends=('kdelibs' 'akonadi' 'gpgme')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'boost' 'cyrus-sasl' 'openldap')
-source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2"
-        'fix-invitations.diff')
-md5sums=('36316f5fc5b2e0ec123a8e00a522dd80' '9e9ac55a992a3d9eb715ccadc8f1bac6')
+source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('36316f5fc5b2e0ec123a8e00a522dd80')
 
 build() {
-	cd $srcdir/${pkgname}-${pkgver}
-	patch -p4 -i $srcdir/fix-invitations.diff || return 1
-	cd ..
+	cd $srcdir
 	mkdir build
 	cd build
 	cmake ../${pkgname}-${pkgver} \
