--- a/pcmciautils/trunk/PKGBUILD
+++ b/pcmciautils/trunk/PKGBUILD
@@ -30,3 +30,5 @@ build() {
   # add fixed rules file
   install -D -m644 $startdir/src/60-pcmcia.rules $startdir/pkg/etc/udev/rules.d/
 }
+md5sums=('9e12435c8b6cf7bf59894e90e480b4aa'
+         '683150da64dd81cf9f7884b6fce06980')
