--- a/qt/trunk/PKGBUILD
+++ b/qt/trunk/PKGBUILD
@@ -3,16 +3,16 @@
 
 pkgname=qt
 pkgver=4.4.2
-pkgrel=2
-_qtcopyver=862767
+pkgrel=3
+_qtcopyver=863965
 pkgdesc="The QT gui toolkit."
 arch=('i686' 'x86_64')
 url="http://www.trolltech.com/products/qt"
 license=('GPL3')
 options=('!libtool' '!docs')
-depends=('libpng' 'libxi' 'mesa' 'fontconfig' 'libxrandr' 'glib2' 'libtiff' 'libmng' 'sqlite3')
+depends=('libpng' 'libxi' 'mesa' 'fontconfig' 'libxrandr' 'glib2' 'libtiff' 'libmng' 'sqlite3' 'dbus' 'libxcursor' 'libxinerama')
 optdepends=('postgresql-libs' 'libmysqlclient' 'unixodbc')
-makedepends=('postgresql-libs' 'mysql' 'unixodbc')
+makedepends=('inputproto' 'postgresql-libs' 'mysql' 'unixodbc' 'cups' 'libxfixes')
 provides=("qt4=${pkgver}")
 replaces=('qt4')
 conflicts=('qt4')
@@ -21,7 +21,7 @@ _pkgfqn=qt-x11-opensource-src-$pkgver
 source=("ftp://ftp.trolltech.com/qt/source/${_pkgfqn}.tar.gz"
         "ftp://ftp.archlinux.org/other/qt/qt-copy-patches-${_qtcopyver}.tar.bz2")
 md5sums=('d310e4aada6b726c141cb3cfa848edea'
-         'cfeb2c83a0f4b40d64a54f22d7d0d228')
+         'e24c3505cdba21a254ccfc0a5b7af508')
 
 build() {
 	unset QMAKESPEC
@@ -62,10 +62,22 @@ build() {
 		-plugin-sql-{psql,mysql,sqlite,odbc} \
 		-system-sqlite \
 		-no-phonon \
+		-dbus-linked \
+		-webkit \
 		-no-separate-debug-info \
 		-nomake examples \
 		-nomake docs \
 		-nomake demos \
+		-assistant-webkit \
+		-system-libpng \
+		-system-libjpeg \
+		-system-zlib \
+		-openssl-linked \
+		-cups \
+		-reduce-relocations \
+		-xinerama \
+		-xcursor \
+		-xfixes \
 		-optimized-qmake || return 1
 
 	make || return 1
