--- a/xcb-util/trunk/PKGBUILD
+++ b/xcb-util/trunk/PKGBUILD
@@ -17,7 +17,7 @@ md5sums=('5f2188492a7d12142d83f73cf0054c59')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
-  ./configure --prefix=/usr || return 1
+  ./configure --prefix=/usr --disable-static || return 1
   make || return 1
   make DESTDIR="${pkgdir}" install || return 1
 }
