--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=gtk2
-pkgver=2.14.2
+pkgver=2.14.3
 pkgrel=1
 pkgdesc="The GTK+ Toolkit (v2)"
 arch=(i686 x86_64)
@@ -12,13 +12,13 @@ depends=('atk>=1.24.0' 'pango>=1.22.0' 'libxcursor' 'libxinerama' 'libxrandr>=1.
 makedepends=('pkgconfig')
 replaces=('gtkprint-cups' 'gail')
 conflicts=('gtkprint-cups' 'gail')
-provides=('gail')
+provides=('gail=1.22.3')
 options=('!libtool' '!docs')
 backup=(etc/gtk-2.0/gtkrc)
 license=('LGPL')
 source=(http://ftp.gnome.org/pub/gnome/sources/gtk+/2.14/gtk+-${pkgver}.tar.bz2
 	gtkclipboard-check.patch)
-md5sums=('b693a2c1c2dd95457b87d0d042aa5bba'
+md5sums=('359e44c8e47dfe04a09ac09b8e015e58'
          '4025d3c15d6c6f73a032f403ffd4ff1c')
 
 build() {
