--- a/stellarium/repos/extra-x86_64/PKGBUILD
+++ b/stellarium/repos/extra-x86_64/PKGBUILD
@@ -1,22 +1,32 @@
 # $Id$
+# Maintainer: Ronald van Haren <ronald.archlinux.org>
 # Contributor: Damir Perisa <damir.perisa@bluewin.ch>
-# Maintainer: damir <damir@archlinux.org>
 
 pkgname=stellarium
-pkgver=0.9.1
-pkgrel=2
+pkgver=0.10.0
+pkgrel=1
 pkgdesc="A stellarium with great graphics and a nice database of sky-objects"
 arch=("i686" "x86_64")
 url="http://stellarium.free.fr/"
 license=('GPL2')
-depends=('libpng' 'mesa' 'sdl_mixer' 'libgl' 'freetype2' 'curl' 'qt>=4.3')
+depends=('libpng' 'mesa' 'sdl_mixer' 'libgl' 'freetype2' 'curl' 'qt>=4.4.2')
 makedepends=('cmake' 'boost')
-source=("http://puzzle.dl.sourceforge.net/sourceforge/stellarium/$pkgname-$pkgver.tar.gz")
+source=("http://downloads.sourceforge.net/$pkgname/$pkgname-$pkgver.tgz" \
+	'stellarium.desktop' 'stellarium.png')
+install=stellarium.install
+md5sums=('09465fa11a8caab7a4410f1e5ff6eb8c'
+         'd119a2f0fc23eebb440697ed0f759fea'
+         '134ab08e73f4f5d995a7931a7957b7a3')
 
 build() {
-  cd $startdir/src/$pkgname-$pkgver
-  cmake . -DCMAKE_INSTALL_PREFIX=/usr || return 1
+  cd $srcdir/$pkgname-$pkgver
+  cmake . -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_BUILD_TYPE=RELEASE || return 1
   make || return 1
-  make DESTDIR=$startdir/pkg install
+  make DESTDIR=$pkgdir install
+
+# install desktop file & pixmap
+install -Dm644 $srcdir/stellarium.desktop \
+	$pkgdir/usr/share/applications/stellarium.desktop
+install -Dm644 $srcdir/stellarium.png \
+	$pkgdir/usr/share/pixmaps/stellarium.png
 }
-md5sums=('d0d55cb1ff5acd08a4d3b27d953579c0')
