--- a/labplot/trunk/PKGBUILD
+++ b/labplot/trunk/PKGBUILD
@@ -1,28 +1,29 @@
 # $Id$
+# Maintainer: Ronald van Haren <ronald.archlinux.org>
+# Contributor: damir <damir@archlinux.org>
 # Contributor: Tobias Powalowski <t.powa@gmx.de>
-# Maintainer: damir <damir@archlinux.org>
 
 pkgname=labplot
-pkgver=1.6.0.1
-origver=1.6.0.1
-pkgrel=3
+pkgver=1.6.0.2
+pkgrel=1
 pkgdesc="Plotting, Data analysis and visualisation"
-arch=(i686 x86_64)
+arch=('i686' 'x86_64')
 url="http://staff.mbi-berlin.de/gerlach/Linux/LabPlot/"
 license=("GPL")
-depends=('kdelibs3' 'gsl' 'pstoedit' 'imagemagick>=6.4.0.2' 'qwtplot3d' 'fftw>=3.0.1-5' 'netcdf>=3.6.0.p1')
+depends=('kdelibs3' 'gsl' 'pstoedit' 'imagemagick>=6.4.0.2' 'qwtplot3d' \
+	'fftw>=3.0.1-5' 'netcdf>=3.6.0.p1')
 makedepends=('libxml++>=1.0.4-2' 'audiofile')
 options=('!libtool' '!makeflags')
-source=(http://dl.sourceforge.net/sourceforge/labplot/LabPlot-$pkgver.tar.gz)
-md5sums=('50dd3033f35003d68d5a4e54336cd6c3')
+source=(http://downloads.sourceforge.net/$pkgname/LabPlot-$pkgver.tar.gz)
 # http://staff.mbi-berlin.de/gerlach/Linux/LabPlot/src/$origname-$pkgver.tar.gz)
+md5sums=('850256dcd02c4a8ede5b5fe3fbc21ab7')
 
 build() {
- cd $startdir/src/LabPlot-$origver
+ cd $srcdir/LabPlot-$pkgver
  . /etc/profile.d/kde3.sh
  ./configure --prefix=/opt/kde \
              --enable-mt \
              --without-arts --disable-audiofile --disable-KexiDB # libkexidb in arch is in koffice and needs to be splitted to a separate pkg
  make || return 1
- make DESTDIR=$startdir/pkg install
+ make DESTDIR=$pkgdir install
 }
