--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,22 +1,25 @@
 # $Id$
-# Maintainer: Judd <jvinet@zeroflux.org>
+# Maintainer: 
+# Contributor: Judd <jvinet@zeroflux.org>
+
 pkgname=nfsidmap
-pkgver=0.20
-pkgrel=2
+pkgver=0.21
+pkgrel=1
 pkgdesc="Library to help mapping IDs, mainly for NFSv4"
-arch=(i686 x86_64)
+arch=('i686' 'x86_64')
 url="http://www.citi.umich.edu/projects/nfsv4/linux/"
 depends=('glibc' 'libldap')
 license=('custom:nfsidmap')
 options=(!libtool)
 source=(http://www.citi.umich.edu/projects/nfsv4/linux/libnfsidmap/libnfsidmap-$pkgver.tar.gz)
-md5sums=('9233cb77876eb642374a0d2bcaba1170')
+md5sums=('56b05e30645353befbf73bd905270d4b')
 
 build() {
-  cd $startdir/src/lib$pkgname-$pkgver
+  cd $srcdir/lib$pkgname-$pkgver
   ./configure --prefix=/usr --sysconfdir=/etc
   make || return 1
-  make DESTDIR=$startdir/pkg install
+  make DESTDIR=$pkgdir install || return 1
+
   # install license
   install -D -m644 COPYING $startdir/pkg/usr/share/licenses/nfsidmap/LICENSE
 }
