--- a/libevent/trunk/PKGBUILD
+++ b/libevent/trunk/PKGBUILD
@@ -1,21 +1,22 @@
 # $Id$
-# Maintainer: Judd <jvinet@zeroflux.org>
+# Maintainer: 
+# Contributor: Judd <jvinet@zeroflux.org>
 
 pkgname=libevent
-pkgver=1.3e
+pkgver=1.4.8
 pkgrel=1
-pkgdesc="a mechanism to execute a callback function when a specific event occurs on a file descriptor or after a timeout has been reached"
+pkgdesc="a mechanism to execute a callback function"
 license=('GPL2')
-arch=(i686 x86_64)
+arch=('i686' 'x86_64')
 url="http://www.monkey.org/~provos/libevent/"
 depends=('glibc')
-source=(http://www.monkey.org/~provos/libevent-$pkgver.tar.gz)
+source=(http://www.monkey.org/~provos/libevent-$pkgver-stable.tar.gz)
 options=(!libtool)
+md5sums=('e626c34f86746dffe8d055af0a84d08e')
 
 build() {
-  cd $startdir/src/$pkgname-$pkgver
+  cd $srcdir/$pkgname-$pkgver-stable
   ./configure --prefix=/usr --sysconfdir=/etc
   make || return 1
-  make DESTDIR=$startdir/pkg install
+  make DESTDIR=$pkgdir install || return 1
 }
-md5sums=('8553ad0f8a35d8d96ae0c69c387e06d3')
