--- a/libldap/trunk/PKGBUILD
+++ b/libldap/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=libldap
 pkgver=2.4.11
-pkgrel=1
+pkgrel=2
 pkgdesc="LDAP client libraries"
 arch=('i686' 'x86_64')
 license=('custom')
@@ -57,5 +57,5 @@ build() {
 
   # install custom license
   install -Dm644 ${srcdir}/openldap-${pkgver}/LICENSE \
-	${pkgdir}/usr/share/licenses/openldap/LICENSE
+	${pkgdir}/usr/share/licenses/$pkgname/LICENSE
 }
