--- a/dhcpcd/trunk/PKGBUILD
+++ b/dhcpcd/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=dhcpcd
 pkgver=4.0.1
-pkgrel=1
+pkgrel=2
 pkgdesc="A DHCP client daemon"
 arch=(i686 x86_64)
 license=('BSD')
@@ -14,6 +14,7 @@ depends=('glibc')
 backup=('etc/conf.d/dhcpcd')
 source=(http://roy.marples.name/downloads/dhcpcd/$pkgname-$pkgver.tar.bz2
 	dhcpcd.conf.d)
+options=('!emptydirs')
 md5sums=('4e84bcba4f5c9c2b558db1b1f22e6828'
          '12d866a78d9f5fa5f31ca18b3940d847')
 
@@ -26,6 +27,7 @@ build() {
   # fix installation locations
   export PREFIX=/usr 
   sed -i 's/${PREFIX}\/etc/\/etc/' Makefile
+  sedi -i 's/\/db/\/lib\/dhcpcd/' Makefile
   sed -i 's/${PREFIX}\/sbin/\/sbin/' Makefile  # compatibility hack for current scripts
 
   make || return 1
@@ -36,4 +38,9 @@ build() {
   
   # install standard configuration file
   install -Dm644 ../dhcpcd.conf.d $pkgdir/etc/conf.d/dhcpcd || return 1
+
+  # get the license
+  install -d $pkgdir/usr/share/licenses/$pkgname
+  awk '{if(FNR<27)print $0}' $srcdir/$pkgname-$pkgver/bpf.c \
+	>> $pkgdir/usr/share/licenses/$pkgname/license
 }
