--- a/dhcpcd/trunk/PKGBUILD
+++ b/dhcpcd/trunk/PKGBUILD
@@ -22,25 +22,25 @@ build() {
   cd $srcdir/$pkgname-$pkgver
   
   #disable DUID usage
-  echo "#undef ENABLE_DUID" >> config.h
+  echo "#undef ENABLE_DUID" >> config.h || return 1
   
   # fix installation locations
   export PREFIX=/usr 
-  sed -i 's/${PREFIX}\/etc/\/etc/' Makefile
-  sedi -i 's/\/db/\/lib\/dhcpcd/' Makefile
-  sed -i 's/${PREFIX}\/sbin/\/sbin/' Makefile  # compatibility hack for current scripts
+  sed -i 's/${PREFIX}\/etc/\/etc/' Makefile || return 1
+  sed -i 's/\/db/\/lib\/dhcpcd/' Makefile || return 1
+  sed -i 's/${PREFIX}\/sbin/\/sbin/' Makefile || return 1 # compatibility hack for current scripts
 
   make || return 1
   make DESTDIR=$pkgdir install || return 1
   
   install -d $startdir/pkg/usr/sbin || return 1
-  ln -sf /sbin/dhcpcd $pkgdir/usr/sbin/dhcpcd
+  ln -sf /sbin/dhcpcd $pkgdir/usr/sbin/dhcpcd || return 1
   
   # install standard configuration file
   install -Dm644 ../dhcpcd.conf.d $pkgdir/etc/conf.d/dhcpcd || return 1
 
   # get the license
-  install -d $pkgdir/usr/share/licenses/$pkgname
+  install -d $pkgdir/usr/share/licenses/$pkgname || return 1
   awk '{if(FNR<27)print $0}' $srcdir/$pkgname-$pkgver/bpf.c \
-	>> $pkgdir/usr/share/licenses/$pkgname/license
+	>> $pkgdir/usr/share/licenses/$pkgname/license || return 1
 }
