--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -11,7 +11,7 @@ arch=('i686' 'x86_64')
 url='http://nfs.sourceforge.net'
 license=('GPL')
 backup=('etc/exports' 'etc/conf.d/nfs')
-depends=('glibc' 'tcp_wrappers' 'e2fsprogs' 'portmap' 'nfsidmap' 'libevent>=1.3e')
+depends=('glibc' 'tcp_wrappers' 'e2fsprogs' 'portmap' 'nfsidmap' 'libevent>=1.4.8')
 source=(http://downloads.sourceforge.net/nfs/${pkgname}-${pkgver}.tar.gz
 	nfsd
 	nfslock
