upgpkg: nfs-utils 1.1.3-1
git-svn-id: file:///srv/repos/svn-packages/svn@12973 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/nfs-utils/trunk/PKGBUILD
+++ b/nfs-utils/trunk/PKGBUILD
@@ -11,7 +11,7 @@ arch=('i686' 'x86_64')
 url='http://nfs.sourceforge.net'
 license=('GPL')
 backup=('etc/exports' 'etc/conf.d/nfs')
-depends=('glibc' 'tcp_wrappers' 'e2fsprogs' 'portmap' 'nfsidmap' 'libevent>=1.3e')
+depends=('glibc' 'tcp_wrappers' 'e2fsprogs' 'portmap' 'nfsidmap' 'libevent>=1.4.8')
 source=(http://downloads.sourceforge.net/nfs/${pkgname}-${pkgver}.tar.gz
 	nfsd
 	nfslock
