--- a/dhcpcd/trunk/PKGBUILD
+++ b/dhcpcd/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=dhcpcd
 pkgver=4.0.1
-pkgrel=2
+pkgrel=3
 pkgdesc="A DHCP client daemon"
 arch=(i686 x86_64)
 license=('BSD')
@@ -22,13 +22,15 @@ build() {
   cd $srcdir/$pkgname-$pkgver
   
   #disable DUID usage
-  echo "#undef ENABLE_DUID" >> config.h || return 1
+  #echo "#undef ENABLE_DUID" >> config.h
   
   # fix installation locations
   export PREFIX=/usr 
   sed -i 's/${PREFIX}\/etc/\/etc/' Makefile || return 1
   sed -i 's/\/db/\/lib\/dhcpcd/' Makefile || return 1
-  sed -i 's/${PREFIX}\/sbin/\/sbin/' Makefile || return 1 # compatibility hack for current scripts
+  sed -i 's/\/libexec/\/lib\/dhcpcd/' Makefile || return 1
+  sed -i 's/\/libexec/\/lib\/dhcpcd/' dhcpcd-hooks/Makefile || return 1 
+  sed -i 's/${PREFIX}\/sbin/\/sbin/' Makefile  || return 1
 
   make || return 1
   make DESTDIR=$pkgdir install || return 1
@@ -41,6 +43,6 @@ build() {
 
   # get the license
   install -d $pkgdir/usr/share/licenses/$pkgname || return 1
-  awk '{if(FNR<27)print $0}' $srcdir/$pkgname-$pkgver/bpf.c \
+  awk '{if(FNR<27)print $0}' $srcdir/$pkgname-$pkgver/config.h \
 	>> $pkgdir/usr/share/licenses/$pkgname/license || return 1
 }
