upgpkg: gmp 4.2.3-2     Add texinfo dependency
git-svn-id: file:///srv/repos/svn-packages/svn@12989 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/gmp/trunk/PKGBUILD
+++ b/gmp/trunk/PKGBUILD
@@ -2,10 +2,10 @@
 # Maintainer: Thomas Baechler <thomas@archlinux.org>
 pkgname=gmp
 pkgver=4.2.3
-pkgrel=1
+pkgrel=2
 pkgdesc="A free library for arbitrary precision arithmetic"
 arch=(i686 x86_64)
-depends=('gcc-libs')
+depends=('gcc-libs' 'texinfo')
 license=('LGPL3')
 options=(!libtool)
 install=gmp.install
