--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,10 +2,10 @@
 # Maintainer: Thomas Baechler <thomas@archlinux.org>
 pkgname=gmp
 pkgver=4.2.3
-pkgrel=1
+pkgrel=2
 pkgdesc="A free library for arbitrary precision arithmetic"
 arch=(i686 x86_64)
-depends=('gcc-libs')
+depends=('gcc-libs' 'texinfo')
 license=('LGPL3')
 options=(!libtool)
 install=gmp.install
