upgpkg: intel-dri 7.2-1
git-svn-id: file:///srv/repos/svn-packages/svn@12999 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/intel-dri/trunk/PKGBUILD
+++ b/intel-dri/trunk/PKGBUILD
@@ -2,23 +2,22 @@
 # Maintainer: Alexander Baldeck <alexander@archlinux.org>
 # Contributor: Jan de Groot <jgc@archlinux.org>
 pkgname=intel-dri
-pkgver=7.1
-pkgrel=2
+pkgver=7.2
+pkgrel=1
 pkgdesc="Mesa DRI drivers for Intel chipsets"
 arch=(i686 x86_64)
 url="http://xorg.freedesktop.org/"
-depends=('libdrm>=2.3.1' 'expat>=2.0.1' 'libgl>=7.1-2')
+depends=('libdrm>=2.3.1' 'expat>=2.0.1' 'libgl>=7.2')
 makedepends=('dri2proto>=1.1' 'glproto>=1.4.9' 'pkgconfig' 'libxfixes' 'libxdamage' 'libxxf86vm' 'libxext')
 options=('!libtool')
 source=(http://downloads.sourceforge.net/mesa3d/MesaLib-${pkgver}.tar.bz2
 	mesa-7.1-link-shared.patch)
-md5sums=('6bff7f532d16f90f944a400c8bd7074d'
+md5sums=('04d379292e023df0b0266825cb0dbde5'
          'f0baa948d9810f268413111ee439d24b')
 
 build() {
   cd ${srcdir}/Mesa-${pkgver}
   patch -Np1 -i ${srcdir}/mesa-7.1-link-shared.patch
-  export CFLAGS="${CFLAGS} -ffast-math"
   ./configure --prefix=/usr \
     --with-dri-driverdir=/usr/lib/xorg/modules/dri \
     --with-dri-drivers=i810,i915,i965 \
