--- a/dhcpcd/trunk/PKGBUILD
+++ b/dhcpcd/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=dhcpcd
 pkgver=4.0.1
-pkgrel=3
+pkgrel=4
 pkgdesc="A DHCP client daemon"
 arch=(i686 x86_64)
 license=('BSD')
@@ -45,4 +45,15 @@ build() {
   install -d $pkgdir/usr/share/licenses/$pkgname || return 1
   awk '{if(FNR<27)print $0}' $srcdir/$pkgname-$pkgver/config.h \
 	>> $pkgdir/usr/share/licenses/$pkgname/license || return 1
+
+# make man pages FHS compliant
+  rm -rf $pkgdir/usr/man || return 1
+  install -Dm644 $srcdir/$pkgname-$pkgver/dhcpcd.conf.5 \
+        $pkgdir/usr/share/man/man5/dhcpcd.conf.5 || return 1
+  install -Dm644 $srcdir/$pkgname-$pkgver/dhcpcd-run-hooks.8 \
+	$pkgdir/usr/share/man/man8/dhcpcd-run-hooks.8 || return 1
+  install -Dm644 $srcdir/$pkgname-$pkgver/dhcpcd.8 \
+        $pkgdir/usr/share/man/man8/dhcpcd.8 || return 1
+
+
 }
