--- a/e2fsprogs/trunk/PKGBUILD
+++ b/e2fsprogs/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=e2fsprogs
 pkgver=1.41.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Ext2 filesystem utilities"
 arch=('i686' 'x86_64')
 license=('GPL' 'LGPL' 'MIT')
@@ -30,13 +30,13 @@ build() {
   patch -Np1 -i ../Makefile-fsck.static.patch || return 1
   
   make || return 1
-  make DESTDIR=${startdir}/pkg install install-libs
-  make -C ${startdir}/src/${pkgname}-${pkgver}/misc fsck.static || return 1
+  make DESTDIR=${pkgdir} install install-libs
+  make -C ${srcdir}/${pkgname}-${pkgver}/misc fsck.static || return 1
   
   install -D -m755 ${srcdir}/${pkgname}-${pkgver}/misc/fsck.static \
 	 ${pkgdir}/sbin/fsck.static
   
   sed -i -e 's/^AWK=.*/AWK=awk/' ${pkgdir}/usr/bin/compile_et || return 1
   
-  install -m644 ${startdir}/src/mke2fs.conf ${pkgdir}/etc/ || return 1
+  install -m644 ${srcdir}/mke2fs.conf ${pkgdir}/etc/ || return 1
 }
