--- a/kdeartwork/trunk/PKGBUILD
+++ b/kdeartwork/trunk/PKGBUILD
@@ -9,8 +9,8 @@ arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL' 'FDL')
 groups=('kde')
-depends=('kdebase-workspace' 'xscreensaver')
-makedepends=('pkgconfig' 'cmake' 'automoc4')
+depends=('kdebase-workspace')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'xscreensaver')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('43d2e6caa8796f70ecc49fe449a1f0aa')
 
