--- a/cairo/trunk/PKGBUILD
+++ b/cairo/trunk/PKGBUILD
@@ -3,8 +3,8 @@
 # Contributor: Brice Carpentier <brice@daknet.org>
 
 pkgname=cairo
-pkgver=1.7.6
-pkgrel=2
+pkgver=1.8.0
+pkgrel=1
 pkgdesc="Cairo vector graphics library"
 arch=(i686 x86_64)
 license=('LGPL' 'MPL')
@@ -12,8 +12,8 @@ url="http://cairographics.org/"
 depends=('libpng>=1.2.31' 'libxrender' 'fontconfig>=2.6.0' 'pixman>=0.12.0' 'xcb-util>=0.3.0')
 makedepends=('pkgconfig')
 options=('!libtool')
-source=(http://cairographics.org/snapshots/${pkgname}-${pkgver}.tar.gz)
-md5sums=('c612f581b18903b0751a171685fc38dd')
+source=(http://cairographics.org/releases/${pkgname}-${pkgver}.tar.gz)
+md5sums=('4ea70ea87b47e92d318d4e7f5b940f47')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
