--- a/cairomm/trunk/PKGBUILD
+++ b/cairomm/trunk/PKGBUILD
@@ -3,21 +3,21 @@
 # Contributor: criminy <criminy@gmail.com>
 
 pkgname=cairomm
-pkgver=1.6.0
+pkgver=1.6.4
 pkgrel=1
 pkgdesc="C++ bindings to Cairo vector graphics library"
 arch=('i686' 'x86_64')
 url="http://www.cairographics.org"
 license=('LGPL' 'MPL')
-depends=('cairo>=1.6.4' 'gcc-libs>=4.3.0')
+depends=('cairo>=1.8.0' 'gcc-libs>=4.3.2')
 makedepends=('pkgconfig')
 source=(http://www.cairographics.org/releases/${pkgname}-${pkgver}.tar.gz)
 options=('!libtool' '!emptydirs')
-md5sums=('549b0c9eaa25d61c4dd92d2de1cb4a46')
+md5sums=('63561c62536173a98f03005dfe55c90e')
 
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
+  cd "${srcdir}/${pkgname}-${pkgver}"
   ./configure --prefix=/usr || return 1
   make || return 1
-  make DESTDIR=${startdir}/pkg install || return 1
+  make DESTDIR="${pkgdir}" install || return 1
 }
