upgpkg: smplayer-themes 0.1.17-1
git-svn-id: file:///srv/repos/svn-packages/svn@13363 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/smplayer-themes/trunk/PKGBUILD
+++ b/smplayer-themes/trunk/PKGBUILD
@@ -1,9 +1,9 @@
 # $Id$
-# Maintainer: Varun Acharya <varun@archlinux.org>
+# Maintainer: Allan McRae <allan@archlinux.org>
 # Contributor: Alessio 'mOLOk' Bolognino <themolok@gmail.com>
  
 pkgname=smplayer-themes
-pkgver=0.1.16
+pkgver=0.1.17
 pkgrel=1
 pkgdesc="Themes for smplayer"
 arch=('i686' 'x86_64')
@@ -11,7 +11,7 @@ url="http://smplayer.sourceforge.net/"
 license=('GPL')
 depends=('smplayer')
 source=(http://downloads.sourceforge.net/sourceforge/smplayer/smplayer-themes-$pkgver.tar.bz2)
-md5sums=('950de1762bf610350e9a5cea0de17eac')
+md5sums=('0308bfb7cd38717a8f2add2add52b707')
 
 build() { 
      cd ${srcdir}/${pkgname}-${pkgver}
