--- a/kfax/trunk/PKGBUILD
+++ b/kfax/trunk/PKGBUILD
@@ -14,7 +14,7 @@ depends=('kdebase-runtime')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
 source=("http://download.kde.org/stable/${_kdever}/src/extragear/${pkgname}-${pkgver}-kde${_kdever}.tar.bz2")
-md5sums=('')
+md5sums=('b1dbcca4b79a4f386afd5c86c81592f0')
 
 build() {
 	cd $srcdir
